# MVPFolderCreater

./: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md
CPPversion/: App.cpp  App.h  App.xaml  CMakeLists.txt  FolderCreator.rc  MainWindow.cpp  MainWindow.h  MainWindow.xaml  Resource.h  app.manifest  main.cpp  pch.h
standalone_gui/: Makefile  compile.bat  main.cpp
